--- a/common.css
+++ b/common.css
@@ -1,5 +1,11 @@
+@font-face {
+    font-family: "Sour_Gummy";
+    src: url(Sour_Gummy/SourGummy-VariableFont_wdth\,wght.ttf);
+}
+
 html, body {
     background-color: thistle;
+    
 }
 
 a {
@@ -12,6 +18,7 @@ a {
     padding: 5px;
     width: 160px;
     text-align: center;
+    font-family: "Sour_Gummy";
 }
 
 #home {
